# substrateminer

./: .gitignore  LICENSE  README-index.md  README.md  Readme.md  config.yml  environment-Linux.yml  environment-macOS.yml  environment.yml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: jekyll-ci.yml  python-ci.yml  python-package.yml  substrateminer-mac.yml
consensus/: consensus.py  consensus_funcs.py
docs/: README-index.md  README.md  _config.yml  index.md
docs/_includes/: head-custom.html
miner/: miner.py  miner_funcs.py
msa/: msa.py
paper/: paper.bib  paper.md  paper_tmp.html
paper/graphics/: workflow.drawio
pathfinder/: pathfinder.py
png/: workflow.drawio
readme_docs/: ci_sequence.md  ci_status.md  contributing.md  custom_workflow.md  examples.md  gh_status.md  header.md  installation.md  issue_reporting.md  license.md  methods.md  quick_start.md  requirements.md  summary.md
substrate_miner/: __init__.py  main.py
substrate_miner/consensus/: consensus.py  consensus_funcs.py
substrate_miner/miner/: miner.py  miner_funcs.py
substrate_miner/msa/: msa.py
substrate_miner/pathfinder/: pathfinder.py
substrate_miner/records/: record2seq.py  record_class.py
unittests/: test-config.yml  test_consensus_cli.py  test_msa.py  test_msa_cli.py  test_pathfinder_cli.py  test_seperate_targets.py
unittests/data/: msa.fasta  msa_align.fas  test-uniprot.txt  test.fasta  uniprot_id.txt  uniprot_id_short.txt  uniprot_id_test.txt  weblogo.fasta
unittests/results/: expected_test_target_loc_cli.yml  msa_mafft.aln  (+2 more)
